feat: game discovery when room created
